[workspace]
members = [
    "libs/*"
]
resolver = "2"

[profile.release]
lto = true

[workspace.dependencies]
anyhow = "1.0.82"
anchor-client = "^0.27.0"
async-stream = "0.3.5"
base64 = "0.13.0"
bincode = "1.3.3"
borsh = ">=0.9, <0.11" # anchor dependent
cached = "0.44.0"
log = "0.4.21"
once_cell = "1.19.0"
solana-client = "1.17.22"
solana-sdk = "1.17.22"
solana-transaction-builder = { path =  "./libs/solana-transaction-builder"}
solana-transaction-executor = { git = "https://github.com/marinade-finance/solana-transaction-executor", branch = "master"}
thiserror = "1.0.58"
tokio = { version = "1.34.0", features = ["full"] }
tokio-executor-trait = "2.1.1"
uuid = { version = "1.4.1", features = ["v4"] }
