[package]
name = "solana-transaction-builder-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
cached = {  workspacee = true }
log = { workspace = true }
solana-client = { workspace = true }
solana-sdk = {workspace = true}
solana-transaction-builder = { workspace = true }
solana-transaction-executor = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
