[package]
name = "solana-transaction-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
